fixed z-index dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,15 +165,15 @@ h3 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	gap: 10px;
 	border: .5px solid white;
 	border-radius: 10px;
 	background-color: #007edfc4;
 	backdrop-filter: blur(25px);
 	position: fixed;
-	z-index: 3;
 	top: 15px;
 	left: 15px;
-	gap: 10px;
+	z-index: 2;
 	cursor: pointer;
 }
 
@@ -194,6 +194,7 @@ h3 {
 	position: fixed;
 	top: 15px;
 	right: 15px;
+	z-index: 2;
 }
 
 .mode {
@@ -206,6 +207,7 @@ h3 {
 	background-position: center;
 	background-repeat: no-repeat;
 	transition: transform .5s ease-out, background-color .5s ease-out;
+	cursor: pointer;
 }
 
 a {
